--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,12 +2,6 @@
   "name": "Vote Coin App",
   "short_name": "VoteCoin",
   "theme_color": "#4DBA87",
-  "protocol_handlers": [
-    {
-      "protocol": "web+algorand",
-      "url": "/pay/%s"
-    }
-  ],
   "icons": [
     {
       "src": "/android-chrome-192x192.png",
@@ -20,13 +14,13 @@
       "type": "image/png"
     },
     {
-      "src": "/android-chrome-maskable-192x192.png",
+      "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/android-chrome-maskable-512x512.png",
+      "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
