--- a/.github/workflows/deploy-k8s.yaml
+++ b/.github/workflows/deploy-k8s.yaml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.4
         with:
-          ref: new-ui-test
+          ref: main
       - uses: actions/setup-node@v2
         with:
           node-version: '16.x'
