--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "qrcode-reader-vue3": "^3.1.2",
     "qrcode-vue3": "^1.4.17",
     "register-service-worker": "^1.7.1",
+    "slugify": "^1.6.5",
     "uuid": "^8.3.2",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.12",
