--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "crypto-random-string": "^4.0.0",
     "cryptojs": "^2.5.3",
     "dexie": "^3.2.0",
+    "ed2curve": "^0.3.0",
     "leaflet": "^1.7.1",
     "moment": "^2.29.1",
     "page": "^1.11.6",
@@ -33,6 +34,7 @@
     "qrcode-vue3": "^1.4.17",
     "register-service-worker": "^1.7.1",
     "slugify": "^1.6.5",
+    "tweetnacl": "^1.0.3",
     "uuid": "^8.3.2",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.12",
