--- a/package.json
+++ b/package.json
@@ -10,53 +10,67 @@
   },
   "dependencies": {
     "@json-rpc-tools/utils": "^1.7.6",
-    "@popperjs/core": "^2.11.2",
-    "@randlabs/myalgo-connect": "^1.1.2",
-    "@revolist/vue3-datagrid": "^3.0.97",
-    "@walletconnect/client": "^1.7.7",
-    "algorand-walletconnect-qrcode-modal": "^1.7.4",
-    "algosdk": "^1.15.0",
+    "@popperjs/core": "^2.11.8",
+    "@randlabs/myalgo-connect": "^1.4.2",
+    "@revolist/vue3-datagrid": "^3.2.17",
+    "@walletconnect/client": "^1.8.0",
+    "algorand-walletconnect-qrcode-modal": "^1.8.0",
+    "algosdk": "^1.24.1",
     "axios": "^0.21.4",
     "base64url": "^3.0.1",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.3.0",
     "buffer": "^6.0.3",
-    "check-password-strength": "^2.0.3",
-    "copy-to-clipboard": "^3.3.1",
-    "core-js": "^3.20.3",
+    "check-password-strength": "^2.0.7",
+    "copy-to-clipboard": "^3.3.3",
+    "core-js": "^3.31.0",
+    "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
     "crypto-random-string": "^4.0.0",
     "cryptojs": "^2.5.3",
-    "dexie": "^3.2.0",
+    "dexie": "^3.2.4",
     "ed2curve": "^0.3.0",
-    "leaflet": "^1.7.1",
-    "moment": "^2.29.1",
+    "leaflet": "^1.9.4",
+    "moment": "^2.29.4",
     "page": "^1.11.6",
     "primeicons": "^4.1.0",
-    "primevue": "^3.11.0",
+    "primevue": "^3.29.2",
     "qrcode-reader-vue3": "^3.1.2",
-    "qrcode-vue3": "^1.4.17",
-    "register-service-worker": "^1.7.1",
-    "slugify": "^1.6.5",
+    "qrcode-vue3": "^1.5.40",
+    "register-service-worker": "^1.7.2",
+    "slugify": "^1.6.6",
+    "stream-browserify": "^3.0.0",
     "tweetnacl": "^1.0.3",
+    "universal-provider-with-algorand": "^2.8.2",
     "uuid": "^8.3.2",
-    "vue-i18n": "^9.1.9",
-    "vue-router": "^4.0.12",
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.2.2",
     "vue3-flip-countdown": "^0.1.6",
-    "vuex": "^4.0.2"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@intlify/vue-i18n-loader": "^2.1.2",
-    "@vue/cli-plugin-babel": "^4.5.15",
-    "@vue/cli-plugin-eslint": "^4.5.15",
-    "@vue/cli-plugin-pwa": "^4.5.15",
-    "@vue/cli-service": "^4.5.15",
-    "@vue/compiler-sfc": "^3.2.29",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7",
-    "eslint-plugin-vue": "^7",
+    "@babel/core": "^7.22.6",
+    "@babel/eslint-parser": "^7.22.6",
+    "@intlify/vue-i18n-loader": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-pwa": "^5.0.8",
+    "@vue/cli-plugin-typescript": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/compiler-sfc": "*",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "browser-sync": "^2.29.3",
+    "cypress": "^12.16.0",
+    "eslint": "^8.44.0",
+    "eslint-plugin-vue": "^9.15.1",
     "glob-parent": "^6.0.2",
-    "vue": "^3.2.29",
-    "vue-cli-plugin-i18n": "^2.3.1"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.8",
+    "typescript": "^5.1.6",
+    "vue": "*",
+    "vue-cli-plugin-i18n": "^2.3.2",
+    "vue-eslint-parser": "^9.3.1"
   },
   "eslintConfig": {
     "root": true,
