--- a/package.json
+++ b/package.json
@@ -9,23 +9,34 @@
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
+    "@agoralabs-sh/avm-web-provider": "^1.7.0",
+    "@algorandfoundation/liquid-auth-use-wallet-client": "^1.1.0",
+    "@blockshake/defly-connect": "^1.1.6",
     "@json-rpc-tools/utils": "^1.7.6",
+    "@perawallet/connect": "^1.3.5",
+    "@perawallet/connect-beta": "^2.0.21",
     "@popperjs/core": "^2.11.8",
     "@randlabs/myalgo-connect": "^1.4.2",
+    "@txnlab/use-wallet-vue": "^3.10.1",
     "@walletconnect/client": "^1.8.0",
+    "@walletconnect/modal": "^2.7.0",
+    "@walletconnect/sign-client": "^2.17.2",
     "algorand-walletconnect-qrcode-modal": "^1.8.0",
-    "algosdk": "^1.24.1",
-    "axios": "^0.21.4",
+    "algosdk": "^2.9.0",
+    "axios": "^1.7.8",
     "bootstrap": "^5.3.1",
     "buffer": "^6.0.3",
     "check-password-strength": "^2.0.7",
     "copy-to-clipboard": "^3.3.3",
     "crypto-browserify": "^3.12.0",
     "ed2curve": "^0.3.0",
+    "lute-connect": "^1.4.1",
+    "module-alias": "^2.2.3",
     "moment": "^2.29.4",
+    "noop3": "^1000.0.0",
     "primeicons": "^4.1.0",
-    "primevue": "^3.34.1",
-    "qrcode-vue3": "^1.6.8",
+    "primevue": "^3.53.0",
+    "qrcode-vue3": "^1.7.1",
     "register-service-worker": "^1.7.2",
     "slugify": "^1.6.6",
     "stream-browserify": "^3.0.0",
@@ -55,7 +66,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "glob-parent": "^6.0.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
+    "prettier": "^3.4.1",
     "typescript": "^5.2.2",
     "vue": "*",
     "vue-cli-plugin-i18n": "^2.3.2",
